bugfix: Fix <VerticalAxis/> text being overlapped by chart

--- a/src/views/MainView/index.css
+++ b/src/views/MainView/index.css
@@ -27,7 +27,7 @@
   z-index: 10;
 }
 
-.chart .VerticalChartAxis .tick {
+.chart .VerticalAxis {
   z-index: 100;
 }
 
